--- a/client/src/pages/About/About.scss
+++ b/client/src/pages/About/About.scss
@@ -194,7 +194,7 @@
 
   padding: 50px;
   text-align: center;
-  color: var(--purple-shades-dark);
+  color: var(--text-dynamic);
 
   @include devices(tablet) {
     width: 85vw;
