--- a/client/src/pages/SignUp/SignUp.scss
+++ b/client/src/pages/SignUp/SignUp.scss
@@ -19,7 +19,7 @@
 }
 
 .sign-up-container {
-  background-color: var(--white);
+  background-color: var(--signup-container);
   border-radius: 15px;
   padding: 40px min(150px, 5%);
   margin: 50px;
